Bug 275287 - "Open File Manager" should not be available when running remote sessions
Summary: "Open File Manager" should not be available when running remote sessions
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-09 15:26 UTC by Alvin
Modified: 2011-06-11 20:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin 2011-06-09 15:26:04 UTC
Version:           2.6.3 (using KDE 4.6.3) 
OS:                Linux

The "Open File Manager" menu item behaves differently while in a remote session. Results are unexpected. Unless used locally, it doesn't open the location in a file manager.

Reproducible: Always

Steps to Reproduce:
Open konsole
Log on to a remote system
'File' -> 'Open File Manager'

Actual Results:  
Using ssh: another konsole window will open
Using rsh: Error: Malformed URL
Using telnet: Dolphin will open

Expected Results:  
Either the remote location opens (because there is a KIO-slave), or the menu item shouldn't be available.
Comment 1 Kurt Hindenburg 2011-06-11 14:52:22 UTC
I agree

For example when opening file manager from a ssh session, Konsole tries to open:
KUrl("ssh://mercury")
Comment 2 Kurt Hindenburg 2011-06-11 20:01:05 UTC
Git commit 58ddcb570e4a3994a63122ef97bf93bda9824896 by Kurt Hindenburg.
Committed on 11/06/2011 at 19:55.
Pushed by hindenburg into branch 'master'.

For remote session, 'Open File Manager' will open the user's home path.

Currently, when using 'Open File Manager' on a remote session,
unexpected results will occur.  For example, for ssh, it will try to
open another Konsole to ssh into the remote server.
Other options to consider in the future, disabling the menu and
transforming URL into what the user might expect.
BUG: 275287

M  +10   -1    src/SessionController.cpp     

http://commits.kde.org/konsole/58ddcb570e4a3994a63122ef97bf93bda9824896